--- a/ch09/package.json
+++ b/ch09/package.json
@@ -2,7 +2,7 @@
   "name": "ch07",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "meadowlark.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
